<?xml version="1.0"?>
<package format="2">
  <!--
   This file is mostly here to provide ros dependencies when this project is built with catkin
   -->
  <name>django</name>
  <version>:{version}</version>
  <description>
  A high-level Python Web framework that encourages rapid development and clean, pragmatic design.
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/django/django.git</url>
  <url type="bugtracker">https://github.com/django/django.git/issues</url>

  <author>Django Software Foundation</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.1.15">catkin_pip</build_depend>

  <depend>python-bcrypt</depend>

  <export>
    <rosdoc external_url="https://docs.djangoproject.com/en/stable/" />
  </export>

</package>


